--- a/src/components/AppScreenshots/styles.scss
+++ b/src/components/AppScreenshots/styles.scss
@@ -10,7 +10,6 @@
         display: inline-block;
         height: 100%;
         width: 100%;
-        margin-top: 7vh;
     }
 }
 
